--- a/app/installation/template.hbs
+++ b/app/installation/template.hbs
@@ -51,3 +51,6 @@
     * I work on OSX, so I'll be using <a href="http://brew.sh/">Homebrew</a> to install certain packages.
   </p>
 {{/md-card-panel}}
+
+{{#link-to 'intro' class='left'}}{{md-btn icon='mdi-hardware-keyboard-arrow-left' iconPosition='left' text='Installation'}}{{/link-to}}
+{{#link-to 'setting-up-project' class='right'}}{{md-btn icon='mdi-hardware-keyboard-arrow-right' iconPosition='right' text='Getting Started'}}{{/link-to}}
