--- a/app/setting-up-project/template.hbs
+++ b/app/setting-up-project/template.hbs
@@ -1,1 +1,33 @@
-<h2>Setting up your project</h2>
+{{#md-card title="Setting up your project"}}
+  {{#md-card-content}}
+    <p class="flow-text">
+      As much as I'd like to make a blog or to-do list, let's make an app that
+      lets us build stock portfolios. We'll be able to add/edit/delete these
+      portfolios and add/edit/delete stocks that belong to these portfolios.
+    </p>
+    <p class="flow-text">
+      The first thing we'll do is set up our project directory. We'll have a
+      single project folder with our Rails and Ember app inside. We'll keep both
+      apps under one <code>git</code> repo*. In your terminal
+      <code>
+        <blockquote>
+        <p>mkdir [APPNAME]</p>
+        <p>cd [APPNAME]</p>
+        <p>git init</p>
+      </blockquote>
+    </code>
+    </p>
+  {{/md-card-content}}
+{{/md-card}}
+
+
+{{#md-card-panel class="teal lighten-3" bodyClass="white-text"}}
+  <p>
+    * A strong case can be made for keeping your API and Ember App under
+    seperate version control so they can evolve seperately, but for simplicity's
+    sake we'll use one <code>git</code> repo.
+  </p>
+{{/md-card-panel}}
+<div id="_kmts">
+  <script src="//komments.net/embed/748a241e-ebe4-4116-90d6-6ec9adb0dddd" defer="defer"></script>
+</div>
