clean up routes and nest under categories

--- a/app/intro/installation/template.hbs
+++ b/app/intro/installation/template.hbs
@@ -53,4 +53,4 @@
 {{/md-card-panel}}
 
 {{#link-to 'intro' class='left'}}{{md-btn icon='mdi-hardware-keyboard-arrow-left' iconPosition='left' text='Installation'}}{{/link-to}}
-{{#link-to 'setting-up-project' class='right'}}{{md-btn icon='mdi-hardware-keyboard-arrow-right' iconPosition='right' text='Getting Started'}}{{/link-to}}
+{{#link-to 'intro.setting-up-project' class='right'}}{{md-btn icon='mdi-hardware-keyboard-arrow-right' iconPosition='right' text='Getting Started'}}{{/link-to}}
