--- a/app/intro/template.hbs
+++ b/app/intro/template.hbs
@@ -43,7 +43,7 @@
   {{/md-card-content}}
 {{/md-card}}
 
-{{#link-to 'installation' class='right'}}{{md-btn icon='mdi-hardware-keyboard-arrow-right' iconPosition='right' text='Installation'}}{{/link-to}}
+{{#link-to 'intro.installation' class='right'}}{{md-btn icon='mdi-hardware-keyboard-arrow-right' iconPosition='right' text='Installation'}}{{/link-to}}
 <div id="_kmts">
   <script src="//komments.net/embed/748a241e-ebe4-4116-90d6-6ec9adb0dddd" defer="defer"></script>
 </div>
